# config

./: .gitignore  .mrconfig  .sops.yaml  AGENTS.md  BEFORE_AND_AFTER.md  CLAUDE.md  COMPLETION_REPORT.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MIGRATION_GUIDE.md  PLAN.md  QUICKSTART.md  README.md  README_PHASE1_COMPLETE.md  REFACTORING_PLAN.md  TODO.md  configuration.nix  devenv.nix  done.txt  flake.nix  hardware-configuration.nix  home.nix  justfile  secretspec.toml  statix.toml  todo.txt
docs/: 20260403T193841--dendritic-migration-review__nix_review_dendritic.md
docs-ai/: CHANGELOG.md
hosts/: mod.apps.productivity.nix  mod.apps.web-browsers.nix  mod.containers.nix  mod.dsdv.software.nix  mod.guest-systems.nix  mod.hw.laptop.nix  mod.hw.lenovo-thinkpad-p52.nix  mod.input-devices.nix  mod.language-models.nix  mod.os.networking.nix  mod.package-management.nix
modules/: ai.nix  base.nix  browsers.nix  cli-utils.nix  containers.nix  cuda.nix  desktop.nix  dev-electronics.nix  dev-mechanical.nix  dev-software.nix  dev-web.nix  disko.nix  editors.nix  fonts.nix  guest-systems.nix  gui-apps.nix  language-machine.nix  multimedia.nix  networking.nix  niks3-auto-upload.nix  nix.nix  onlyoffice.nix  opensnitch.nix  openssh.nix  os.onlyoffice.nix  overlays.nix  package-management.nix  science.nix  secrets.nix  security-keys.nix  shells.nix  ssh.nix  study-linguistics.nix  study-math.nix  terminals.nix  tools-backups.nix  tools-research.nix  tools-secrets.nix  version-control.nix  (+1 more)
templates/dioxus-minimal/: .gitignore  Cargo.toml  devenv.nix
(+142 files in other folders)
